--- a/angular.json
+++ b/angular.json
@@ -54,6 +54,9 @@
         },
         "serve": {
           "builder": "@angular/build:dev-server",
+          "options": {
+            "allowedHosts": ["blessed-mostly-bee.ngrok-free.app"]
+          },
           "configurations": {
             "production": {
               "buildTarget": "Maze:build:production"
